--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <a href="https://github.com/harsh19-g"><i class="fa-brands fa-square-github"></i></a>
                     <a href="https://instagram.com/newg.ai?igshid=MWMzaHY3azFzenY4Yw=="><i class="fa-brands fa-square-instagram"></i></a>
                 </div>
-                <a href="images/Harsh Gupta-Resume.pdf" download class="btn btn2">Download Resume</a>
+                <a href="images/Harsh Gupta Resume.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
